z-index fix

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -62,6 +62,11 @@ user-select: none;
     border: 3px solid white;
     border-radius: 10px;
     text-align:center;
+    z-index:5;
+
+    p {
+      pointer-events:none
+    }
 }
 
 
